# pyReq

./: .gitignore  README.md
doc/: pyReq.dia
docpdfMiner/: PDFMiner.URL  PLY (Python Lex-Yacc).website  pdfminer3k 1.2.3 Python Package Index.URL
in/: docExample.doc  docExample2.doc  reqListCoverage.xlsx  reqListSprints_OnlyStatus.xlsx
pyReq/Doc/: ReadMe.txt
pyReq/in/: commandLine  reqListSprints.xlsx
pyReq/scripts/: firstCommand  json2testlinkCsv.py  json2xlsx.py  pdf2txt.py  pyReq.py  pythonFilter.py
pyReq/work/: docExample.json
scripts/: LICENSE.txt  Pipfile  json2redmine.py  json2testlinkCsv.py  json2xlsx.py  pdf2json.py  pyReq.py  pyproject.toml  test.bat  test2.bat  tests.py  xlsx2json.py
work/: docExample.json  output.txt
