[tool.poetry]
name = "pyreq"
version = "0.1.0"
description = "Requirements management"
authors = ["Frédéric CABAUD <fcabaud@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
openpyxl = "^3.1.5"
pypdf = "^5.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

